# circular_buffer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  circular_buffer.hpp
cmake/: Dependency.cmake  warnings.cmake
include/: circular_buffer.hpp
include/circular_buffer/: config.hpp  dynamic_circular_buffer.hpp  static_circular_buffer.hpp
include/circular_buffer/detail/: dynamic_iterator.hpp  static_iterator.hpp
test/: benchmark.cpp  catch2.cpp  main.cpp
